...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/start_btn_background"
                android:fontFamily="@font/armata"
                android:text="@string/startBtnStr"
...
                        android:paddingBottom="2dp"
                        android:text="Set New Goal"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnSetStep"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/small_btn_background"
                        android:fontFamily="@font/armata"
                        android:minHeight="40dip"
                        android:paddingTop="2dp"
...
